--- a/yoga/src/main/resources/static/styl.css
+++ b/yoga/src/main/resources/static/styl.css
@@ -28,6 +28,7 @@ body {
     align-items: center;
     width: 100%;
     padding: 2rem;
+    gap: 2rem;
 }
 
 .sect-header-div {
@@ -149,6 +150,38 @@ header nav ul li a {
 
 /* DIRECTIONS SECTION */
 
+.modal-parent {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
 
+.modal {
+    width: 350px;
+    height: 450px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: .9rem;
+}
 
+.modal-img {
+    border: 2px solid black;
+    height: 100%;
+    width: 100%;
+}
+
+.modal-details {
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: .5rem
+}
+
+.modal-title {
+    font-size: 1.3em;
+    font-weight: 500;
+}
 /* DIRECTIONS SECTION */
